<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, main!</string>
    <string name="app_name">musikCube</string>

<string name="menu_settings">Settings</string>
<string name="menu_help">Help</string>
<string name="host"></string>





<string name="username"></string>
<string name="password"></string>
<string name="queryport">10543</string>
<string name="httpport">10544</string>
<color name="headlineColor">#333333</color>
<string name="menu_controls">Player controls</string>
<string name="menu_browse">Browse</string>
<string name="menu_nowplaying">Now playing</string>
<string name="help_main">musikCube is a application that connects to your musikServer that you have installed on your desktop/server computer. The musikServer can be downloaded from http://code.google.com/p/musikcube/\nOnce musikCube is connected you are able to browse and play all your music directly on your phone without having to copy them to you SD card.\n</string>

</resources>
